<resources>
    <string name="app_name">Shoe store App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="enter_email">Enter email</string>
    <string name="password">Password</string>
    <string name="enter_password">Enter password</string>
    <string name="login">Login</string>
    <string name="we_are_pleased_because_you_using_our_app">We are pleased because you using our app</string>
    <string name="go_next_page">Go next page</string>
    <string name="welcome">Welcome</string>
    <string name="cancle">Cancle</string>
    <string name="save">Save</string>
    <string name="enter_description">Enter Description</string>
    <string name="description">Description</string>
    <string name="enter_size">Enter size</string>
    <string name="shoe_size">Shoe Size</string>
    <string name="enter_company">Enter Company</string>
    <string name="company">Company</string>
    <string name="enter_shoe_name">Enter shoe name</string>
    <string name="shoe_name">Shoe Name</string>
    <string name="shoe_information">Shoe Information</string>
    <string name="come_and_learn_more_about_our_app">Come and learn more about our app</string>
    <string name="you_can_add_new_shoe_to_list">You can add new shoe to list lets try it</string>
    <string name="let_s_go">Let\'s go</string>
    <string name="logout">logout</string>
    <string name="size">Size :</string>
    <string name="company_name">Company name :</string>
    <string name="descriptionn">Description :</string>
    <string name="name">Name :</string>
</resources>